// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: fluid and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 0;
  background: transparent;
  display: block;
  text-decoration: none;
}
a:focus::before {
  content: "";
  position: absolute;
  border: 2px solid #1A44EA;
  border-radius: 8px;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
img {
  display: block;
  filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem);
}"
`;

exports[`getComponentCss() should return correct css for size: fluid and theme: light 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 0;
  background: transparent;
  display: block;
  text-decoration: none;
}
a:focus::before {
  content: "";
  position: absolute;
  border: 2px solid #1A44EA;
  border-radius: 8px;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
img {
  display: block;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem);
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: dark 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 0;
  background: transparent;
  display: block;
  text-decoration: none;
}
a:focus::before {
  content: "";
  position: absolute;
  border: 2px solid #1A44EA;
  border-radius: 8px;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
img {
  display: block;
  filter: invert(97%) sepia(55%) saturate(2840%) hue-rotate(180deg) brightness(114%) contrast(103%);
  height: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: inherit and theme: light 1`] = `
":host {
  position: relative;
  display: inline-flex;
  vertical-align: top;
  outline: 0 !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 0;
  background: transparent;
  display: block;
  text-decoration: none;
}
a:focus::before {
  content: "";
  position: absolute;
  border: 2px solid #1A44EA;
  border-radius: 8px;
  top: -6px;
  left: -6px;
  right: -6px;
  bottom: -6px;
}
img {
  display: block;
  filter: invert(3%) sepia(7%) saturate(2930%) hue-rotate(188deg) brightness(91%) contrast(103%);
  height: inherit;
}"
`;
